Respect candidate enumeration per assignment
Uses candidate enum per assignment as given in the form.
Changes enumeration in drag-list and poll-meta-info

--- a/client/src/app/site/assignments/components/assignment-detail/assignment-detail.component.html
+++ b/client/src/app/site/assignments/components/assignment-detail/assignment-detail.component.html
@@ -149,7 +149,7 @@
                     <os-sorting-list
                         [input]="assignment.assignment_related_users"
                         [live]="true"
-                        [count]="true"
+                        [count]="enumerateCandidates"
                         [enable]="hasPerms('manage')"
                         (sortEvent)="onSortingChange($event)"
                     >
