stop-voting shows prompt
Stop voting shows options to either simply stop, publish directly or
abort. Was done using choice service.
Alter vote repo to simply choose with voting state to adress rather than
calculate the next state

Add server-side option to publish a poll in the started state

--- a/client/src/app/site/assignments/modules/assignment-poll/components/assignment-poll/assignment-poll.component.html
+++ b/client/src/app/site/assignments/modules/assignment-poll/components/assignment-poll/assignment-poll.component.html
@@ -48,7 +48,7 @@
                 <button
                     mat-stroked-button
                     [ngClass]="pollStateActions[poll.state].css"
-                    (click)="changeState(poll.nextState)"
+                    (click)="nextPollState()"
                     [disabled]="stateChangePending"
                 >
                     <mat-icon> {{ pollStateActions[poll.state].icon }}</mat-icon>
