--- a/client/src/app/site/interaction/components/applause-bar-display/applause-bar-display.component.html
+++ b/client/src/app/site/interaction/components/applause-bar-display/applause-bar-display.component.html
@@ -1,4 +1,4 @@
-<div class="bar-wrapper" *ngIf="isApplauseTypeBar">
+<div class="bar-wrapper">
     <os-progress class="progress-bar" [value]="percent">
         <div class="level-indicator">
             <div class="level">
