--- a/client/src/app/site/site.component.html
+++ b/client/src/app/site/site.component.html
@@ -114,7 +114,8 @@
             </main>
         </div>
         <div class="toolbars">
-            <os-jitsi></os-jitsi>
+            <os-action-bar></os-action-bar>
+            <os-interaction-container></os-interaction-container>
         </div>
     </mat-sidenav-content>
 </mat-sidenav-container>
