Hide conference bar without interaction
Hide the conference bar if there is no stream and no entering
permission.

Hides the "see stream" button if use user has no permission to see the
stream (call list window)

Use rxjs combineLatest for easier "dead state" detection with less
change pushing

--- a/client/src/app/site/interaction/components/call/call.component.html
+++ b/client/src/app/site/interaction/components/call/call.component.html
@@ -72,15 +72,17 @@
             </div>
             <div class="exit">
                 <!-- Exit jitsi, view stream -->
-                <button
-                    mat-icon-button
-                    color="primary"
-                    matTooltip="{{ 'Continue livestream' | translate }}"
-                    (click)="viewStream()"
-                    *ngIf="!!(liveStreamUrl | async)?.trim()"
-                >
-                    <mat-icon>live_tv</mat-icon>
-                </button>
+                <ng-container *osPerms="permission.coreCanSeeLiveStream">
+                    <button
+                        mat-icon-button
+                        color="primary"
+                        matTooltip="{{ 'Continue livestream' | translate }}"
+                        (click)="viewStream()"
+                        *ngIf="hasLiveStreamUrl | async"
+                    >
+                        <mat-icon>live_tv</mat-icon>
+                    </button>
+                </ng-container>
             </div>
         </div>
     </div>
