Use max-height for video js player

--- a/client/src/app/site/interaction/components/interaction-container/interaction-container.component.scss
+++ b/client/src/app/site/interaction/components/interaction-container/interaction-container.component.scss
@@ -44,7 +44,7 @@ $radius: 5px;
 .video-player {
     display: block;
     width: 500px;
-    height: 280px;
+    max-height: 280px;
 }
 
 .call-body {
