Use vote pending state as subject
Fixes an issue where the vote pending state was not updating correctly
when using state changes over the choice service

--- a/client/src/app/site/assignments/modules/assignment-poll/components/assignment-poll/assignment-poll.component.html
+++ b/client/src/app/site/assignments/modules/assignment-poll/components/assignment-poll/assignment-poll.component.html
@@ -49,14 +49,14 @@
                     mat-stroked-button
                     [ngClass]="pollStateActions[poll.state].css"
                     (click)="nextPollState()"
-                    [disabled]="stateChangePending"
+                    [disabled]="stateChangePendingObservable | async"
                 >
                     <mat-icon> {{ pollStateActions[poll.state].icon }}</mat-icon>
                     <span class="next-state-label">
-                        <ng-container *ngIf="!stateChangePending">
+                        <ng-container *ngIf="!(stateChangePendingObservable | async)">
                             {{ poll.nextStateActionVerbose | translate }}
                         </ng-container>
-                        <ng-container *ngIf="stateChangePending">
+                        <ng-container *ngIf="stateChangePendingObservable | async">
                             {{ 'In progress, please wait...' | translate }}
                         </ng-container>
                     </span>
