Move applause timeout to service
Fixes a bug where the applaus timeout would require reload to work
Fixes a but where the "Show applause amount" config was ignored

Moves the applause timeout logic to service
comonents can now lazily listen to events from sendsApplauseObservable
to know if their applause is in progress

Show applause level depending on config

--- a/client/src/app/site/interaction/components/action-bar/action-bar.component.html
+++ b/client/src/app/site/interaction/components/action-bar/action-bar.component.html
@@ -52,9 +52,9 @@
         mat-mini-fab
         class="action-bar-shadow background-default"
         matTooltip="{{ 'Give applause' | translate }}"
-        [disabled]="applauseDisabled"
-        [matBadge]="applauseLevelObservable | async"
-        [matBadgeHidden]="!(applauseLevelObservable | async)"
+        [disabled]="sendsApplause | async"
+        [matBadge]="applauseLevel | async"
+        [matBadgeHidden]="!(showApplauseLevel | async)"
         (click)="sendApplause()"
         *ngIf="showApplause | async"
         @fade
