--- a/client/src/app/site/interaction/components/applause-particle-display/applause-particle-display.component.html
+++ b/client/src/app/site/interaction/components/applause-particle-display/applause-particle-display.component.html
@@ -1,3 +1,3 @@
-<div [osResized]="resizeSubject" class="particle-wrapper">
+<div [osResized]="resizeSubject" *ngIf="isStable" class="particle-wrapper">
     <Particles id="particles" [options]="options" (particlesLoaded)="particlesLoaded($event)"> </Particles>
 </div>
