Remove chart for analog polls with a majority & fix random TypeError

--- a/client/src/app/shared/components/motion-poll-detail-content/motion-poll-detail-content.component.html
+++ b/client/src/app/shared/components/motion-poll-detail-content/motion-poll-detail-content.component.html
@@ -43,7 +43,7 @@
         </table>
 
         <!-- Chart -->
-        <div class="doughnut-chart">
+        <div *ngIf="!poll.hasSpecialVoteValues" class="doughnut-chart">
             <os-charts type="doughnut" [data]="chartData"></os-charts>
         </div>
     </ng-container>
