--- a/client/src/app/site/interaction/components/call/call.component.scss
+++ b/client/src/app/site/interaction/components/call/call.component.scss
@@ -26,10 +26,12 @@ $wrapper-padding: 5px;
                 height: 100%;
                 width: 70px;
                 right: 0;
+                pointer-events: none;
             }
 
             .member-list {
-                max-height: 100%;
+                max-height: 230px;
+                margin: 0;
                 overflow-y: auto;
 
                 .member-list-entry {
