--- a/client/src/app/site/topics/components/topic-import-list/topic-import-list.component.html
+++ b/client/src/app/site/topics/components/topic-import-list/topic-import-list.component.html
@@ -149,7 +149,7 @@
         </mat-select>
     </div>
     <div class="table-container">
-        <table mat-table [dataSource]="dataSource" matSort>
+        <mat-table [dataSource]="dataSource" matSort>
             <!-- Status column -->
             <ng-container matColumnDef="status" class="first-column" sticky>
                 <mat-header-cell *matHeaderCellDef></mat-header-cell>
@@ -228,6 +228,6 @@
 
             <mat-header-row *matHeaderRowDef="getColumnDefinition()"></mat-header-row>
             <mat-row [ngClass]="getStateClass(row)" *matRowDef="let row; columns: getColumnDefinition()"> </mat-row>
-        </table>
+        </mat-table>
     </div>
 </mat-card>
