--- a/client/src/app/site/users/components/group-list/group-list.component.html
+++ b/client/src/app/site/users/components/group-list/group-list.component.html
@@ -18,7 +18,7 @@
             </mat-expansion-panel-header>
 
             <div class="scrollable-perm-matrix">
-                <table mat-table [dataSource]="getTableDataSource(app.permissions)">
+                <mat-table [dataSource]="getTableDataSource(app.permissions)">
                     <ng-container matColumnDef="perm" sticky>
                         <mat-header-cell *matHeaderCellDef>{{ 'Permissions' | translate }}</mat-header-cell>
                         <mat-cell *matCellDef="let perm">
@@ -48,7 +48,7 @@
 
                     <mat-header-row *matHeaderRowDef="headerRowDef"></mat-header-row>
                     <mat-row *matRowDef="let row; columns: headerRowDef"></mat-row>
-                </table>
+                </mat-table>
             </div>
         </mat-expansion-panel>
     </mat-accordion>
