Updated all translations

--- a/client/src/app/site/motions/modules/motion-import/motion-import-list.component.html
+++ b/client/src/app/site/motions/modules/motion-import/motion-import-list.component.html
@@ -104,7 +104,7 @@
         </div>
     </div>
     <div *ngIf="newCount">
-        <span>{{ 'After verifiy the preview click on "import" please (see top right).' | translate }}</span>
+        <span>{{ 'After verifying the preview click on "import" please (see top right).' | translate }}</span>
     </div>
     <div>
         <mat-select *ngIf="nonImportableCount" class="filter-imports" [(value)]="shown" (selectionChange)="setFilter()">
