--- a/client/src/app/shared/components/video-player/video-player.component.scss
+++ b/client/src/app/shared/components/video-player/video-player.component.scss
@@ -52,12 +52,12 @@
             }
         }
 
-        .youtube-player {
+        .iframe-player {
             height: 100%;
             width: 100%;
             display: flex;
 
-            .youtube-iFrame {
+            .player {
                 width: 100%;
                 height: 280px;
             }
