Make the style of the project titles customizable

--- a/client/src/app/slides/agenda/item-list/item-list-slide.component.html
+++ b/client/src/app/slides/agenda/item-list/item-list-slide.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="data" class="agenda-slide-wrapper">
-    <h1>{{ 'Agenda' | translate }}</h1>
+    <h1 class="projector_h1">{{ 'Agenda' | translate }}</h1>
 
     <div
         *ngFor="let item of data.data.items"
