--- a/client/src/assets/styles/font-variables.scss
+++ b/client/src/assets/styles/font-variables.scss
@@ -30,3 +30,11 @@ $font-weight-monospace: 400;
 $font-chyronname: 'OSFont ChyronName';
 $font-chyronname-src: url('../fonts/fira-sans-latin-400.woff') format('woff');
 $font-weight-chyronname: 400;
+
+/** Projector H1 Font */
+$font-projectorH1: 'OSFont projectorH1';
+$font-projectorH1-src: url('../fonts/fira-sans-latin-400.woff') format('woff');
+
+/** Projector H2 Font */
+$font-projectorH2: 'OSFont projectorH2';
+$font-projectorH2-src: url('../fonts/fira-sans-latin-400.woff') format('woff');
