Make the style of the project titles customizable (#6409)
allow custom font for h1 and h2 projector title

--- a/client/src/assets/styles/projector.scss
+++ b/client/src/assets/styles/projector.scss
@@ -11,13 +11,26 @@
         line-height: 1.1em;
     }
 
+    .slidetitle > h1,
+    h1.projector_h1 {
+        &, * {
+            font-family: $font-projectorH1;
+        }
+    }
+
     h2 {
         line-height: 40px;
         font-weight: normal;
     }
 
+    .slidetitle > h2,
+    h2.projector_h2 {
+        &, * {
+            font-family: $font-projectorH2;
+        }
+    }
+
     h3 {
-        color: #222;
         margin-bottom: 10px;
     }
 
