Implements customizable line numbers
* New motion field 'start_line_number'
* Added migration file
* updated motion slide (data)
  (required updated autoupdate service)

--- a/client/src/app/site/motions/modules/motion-detail/components/motion-detail/motion-detail.component.html
+++ b/client/src/app/site/motions/modules/motion-detail/components/motion-detail/motion-detail.component.html
@@ -525,7 +525,7 @@
                     <mat-icon>cancel</mat-icon>
                 </button>
 
-                <button type="button" mat-button [matMenuTriggerFor]="lineNumberingMenu">
+                <button type="button" mat-button [matMenuTriggerFor]="lineNumberingMenu" #trigger="matMenuTrigger">
                     <mat-icon>format_list_numbered</mat-icon>
                     &nbsp;<span>{{ 'Line numbering' | translate }}</span>
                     <span *ngIf="lnMode === LineNumberingMode.None">
@@ -770,7 +770,9 @@
                 </div>
             </section>
             <section *ngFor="let paragraph of contentForm.value.broken_paragraphs">
-                <em class="red-warning-text">{{ 'This paragraph does not exist in the main motion anymore:' | translate }}</em>
+                <em class="red-warning-text">{{
+                    'This paragraph does not exist in the main motion anymore:' | translate
+                }}</em>
                 <div class="motion-text" [innerHTML]="paragraph | trust: 'html'"></div>
             </section>
         </ng-container>
@@ -973,34 +975,55 @@
 
 <!-- Line number Menu -->
 <mat-menu #lineNumberingMenu="matMenu">
-    <div *ngIf="motion">
-        <button
-            mat-menu-item
-            (click)="setLineNumberingMode(LineNumberingMode.None)"
-            [ngClass]="{ selected: lnMode === LineNumberingMode.None }"
-        >
-            {{ 'none' | translate }}
-        </button>
-        <button
-            mat-menu-item
-            (click)="setLineNumberingMode(LineNumberingMode.Inside)"
-            [ngClass]="{ selected: lnMode === LineNumberingMode.Inside }"
-        >
-            {{ 'inline' | translate }}
-        </button>
-        <button
-            mat-menu-item
-            (click)="setLineNumberingMode(LineNumberingMode.Outside)"
-            [ngClass]="{ selected: lnMode === LineNumberingMode.Outside }"
-        >
-            {{ 'outside' | translate }}
-        </button>
-        <mat-divider></mat-divider>
-        <button mat-menu-item *ngIf="!highlightedLineOpened" (click)="highlightedLineOpened = true">
-            <mat-icon>redo</mat-icon>
-            <span>{{ 'Go to line' | translate }}</span>
-        </button>
-    </div>
+    <ng-template matMenuContent>
+        <div *ngIf="motion">
+            <button
+                mat-menu-item
+                (click)="setLineNumberingMode(LineNumberingMode.None)"
+                [ngClass]="{ selected: lnMode === LineNumberingMode.None }"
+            >
+                {{ 'none' | translate }}
+            </button>
+            <button
+                mat-menu-item
+                (click)="setLineNumberingMode(LineNumberingMode.Inside)"
+                [ngClass]="{ selected: lnMode === LineNumberingMode.Inside }"
+            >
+                {{ 'inline' | translate }}
+            </button>
+            <button
+                mat-menu-item
+                (click)="setLineNumberingMode(LineNumberingMode.Outside)"
+                [ngClass]="{ selected: lnMode === LineNumberingMode.Outside }"
+            >
+                {{ 'outside' | translate }}
+            </button>
+            <mat-divider></mat-divider>
+            <button mat-menu-item *ngIf="!highlightedLineOpened" (click)="highlightedLineOpened = true">
+                <mat-icon>redo</mat-icon>
+                <span>{{ 'Go to line' | translate }}</span>
+            </button>
+            <div
+                mat-list-item
+                id="lineNumberItem"
+                *osPerms="permission.motionCanManage"
+                (click)="$event.stopPropagation()"
+            >
+                <mat-form-field>
+                    <input
+                        matInput
+                        type="number"
+                        min="1"
+                        placeholder="{{ 'Linenumber' | translate }}"
+                        [(ngModel)]="startLineNumber"
+                    />
+                    <button mat-icon-button matSuffix (click)="updateStartLineNumber()">
+                        <mat-icon>check</mat-icon>
+                    </button>
+                </mat-form-field>
+            </div>
+        </div>
+    </ng-template>
 </mat-menu>
 
 <!-- Diff View Menu
